@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <Product xmlns='http://code.google.com/p/open-zwave/'>
+
   <!-- Configuration -->
   <CommandClass id="112">
-    <Value type="list" genre="config" instance="1" index="1" label="1. Enable/Disable ALL ON/OFF" value="255" size="1">
+    <Value type="list" genre="config" instance="1" index="1" label="Enable/Disable ALL ON/OFF" value="255" size="1">
       <Help>Activate/Deactive ALL ON/OFF</Help>
       <Item label="ALL ON disabled/ ALL OFF disabled" value="0" />
       <Item label="ALL ON disabled/ ALL OFF active" value="1" />
@@ -11,7 +12,7 @@
       <Item label="ALL ON active / ALL OFF active" value="255" />
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="3" label="3. Enable/Disable OFF-delay" value="0" size="1">
+    <Value type="list" genre="config" instance="1" index="3" label="Enable/Disable OFF-delay" value="0" size="1">
       <Help>Activate/Deactivate Automatic turning off relay after set time</Help>
       <Item label="Auto OFF disabled for both relays" value="0" />
       <Item label="Auto OFF active only for relay 1" value="1" />
@@ -19,43 +20,43 @@
       <Item label="Auto OFF active for both relays" value="3" />
     </Value>
     
-    <Value type="byte" genre="config" instance="1" index="4" label="4. Relay: OFF-delay time (10ms)" value="20" size="1">
+    <Value type="byte" genre="config" instance="1" index="4" label="Relay: OFF-delay time (10ms)" value="20" size="1">
       <Help>Automatic turning off relay 1 after set time, in 10ms increments (default: 200ms)</Help>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="6" label="6. Separation of association sending (key 1)" value="0" size="1">
+    <Value type="list" genre="config" instance="1" index="6" label="Separation of association sending (key 1)" value="0" size="1">
       <Help>Activate/Deactivate association sending for group 1 - Also see param #15</Help>
       <Item label="Map status to all devices in group 1 (default)" value="0" />
       <Item label="Map OFF status to all devices in group 1, Double click on key 1 will send ON to all devices in group 1, all dimmers set to prev.value" value="1" />
       <Item label="Map OFF status to all devices in group 1, Double click on key 1 will send ON to all devices in group 1, all dimmers set to 100%" value="2" />                
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="13" label="13. Inputs behaviour" value="0" size="1">
+    <Value type="list" genre="config" instance="1" index="13" label="Inputs behaviour" value="0" size="1">
       <Help>In case of bi-stable switches, define their behaviour (toggle or follow)</Help>
       <Item label="Toggle" value="0"/>
       <Item label="Follow switch contact (closed=ON, open=OFF)" value="1"/>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="14" label="14. Inputs Button/Switch configuration" value="1" size="1">
+    <Value type="list" genre="config" instance="1" index="14" label="Inputs Button/Switch configuration" value="1" size="1">
       <Help>Binary inputs type configuration</Help>
       <Item label="Mono-stable input (button)" value="0"/>
       <Item label="Bi-stable input (switch)" value="1"/>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="15" label="15. Dimmer/Roller shutter control" value="0" size="1">
+    <Value type="list" genre="config" instance="1" index="15" label="Dimmer/Roller shutter control" value="0" size="1">
       <Help>Enable/Disable opoeration of dimmer or roller shutter devices associated to group 1.
         Available only when using mono-stable inputs (buttons) - Hold button 1 or double-tap for operation</Help>
       <Item label="Disable Dimmer/Roller shutter control" value="0"/>
       <Item label="Enable Dimmer/Roller shutter control" value="1"/>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="16" label="16. Saving state before power faillure" value="1" size="1">
+    <Value type="list" genre="config" instance="1" index="16" label="Saving state before power faillure" value="1" size="1">
       <Help>Saving state before power faillure</Help>
       <Item label="State NOT saved at power failure, all outputs are set to OFF upon power restore" value="0"/>
       <Item label="State saved at power failure, all outputs are set to previous state upon power restore" value="1"/>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="30" label="30. Relay: Response to General Alarm" value="3" size="1">
+    <Value type="list" genre="config" instance="1" index="30" label="Relay: Response to General Alarm" value="3" size="1">
       <Help></Help>
       <Item label="DEACTIVATION - no response to alarm frames" value="0"/>
       <Item label="ALARM RELAY ON - relay will turn ON upon receipt of alarm frame" value="1"/>
@@ -63,7 +64,7 @@
       <Item label="ALARM FLASHING - relay will turn ON and OFF periodically (see param.39)" value="3"/>
     </Value>
     
-    <Value type="list" genre="config" instance="1" index="31" label="31. Relay: Response to Water Flood Alarm" value="2" size="1">
+    <Value type="list" genre="config" instance="1" index="31" label="Relay: Response to Water Flood Alarm" value="2" size="1">
       <Help></Help>
       <Item label="DEACTIVATION - no response to alarm frames" value="0"/>
       <Item label="ALARM RELAY ON - relay will turn ON upon receipt of alarm frame" value="1"/>
@@ -71,7 +72,7 @@
       <Item label="ALARM FLASHING - relay will turn ON and OFF periodically (see param.39)" value="3"/>                
     </Value>
     
-    <Value type="byte" genre="config" instance="1" index="32" label="32. Relay: Response to Smoke, CO, CO2 Alarm" value="3" size="1">
+    <Value type="list" genre="config" instance="1" index="32" label="Relay: Response to Smoke, CO, CO2 Alarm" value="3" size="1">
       <Help></Help>
       <Item label="DEACTIVATION - no response to alarm frames" value="0"/>
       <Item label="ALARM RELAY ON - relay will turn ON upon receipt of alarm frame" value="1"/>
@@ -79,7 +80,7 @@
       <Item label="ALARM FLASHING - relay will turn ON and OFF periodically (see param.39)" value="3"/>
     </Value>
     
-    <Value type="byte" genre="config" instance="1" index="33" label="33. Relay: Response to Temperature Alarm" value="1" size="1">
+    <Value type="list" genre="config" instance="1" index="33" label="Relay: Response to Temperature Alarm" value="1" size="1">
       <Help></Help>
       <Item label="DEACTIVATION - no response to alarm frames" value="0"/>
       <Item label="ALARM RELAY ON - relay will turn ON upon receipt of alarm frame" value="1"/>
@@ -87,7 +88,7 @@
       <Item label="ALARM FLASHING - relay will turn ON and OFF periodically (see param.39)" value="3"/>                
     </Value>
     
-    <Value type="byte" genre="config" instance="1" index="39" label="39. ALARM FLASHING alarm time" value="600" size="2">
+    <Value type="short" genre="config" instance="1" index="39" label="Active flashing alarm time" value="600" min="1" max="20000" size="2">
       <Help>Amount of time (ms) the device keeps on flashing after receipt of Alarm Frame</Help>
     </Value>
   </CommandClass>
