@@ -34,4 +34,5 @@ Version 1.1
  - Added new id for Aeon Labs Micro Smart Engergy Illuminator G2 thanks to
    jmeyer (Justin)
  - Fixed Issue 329 - Update Fibaro FGD211 Config File (Alex)
+ - Fixed Issue 330 - Update Fibaro FGS211 Config File (Alex)
  
